✨ Add django model to store data in DB

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
+django==5.0.7
+djangorestframework
+django-cors-headers
+django-filter
+djangorestframework_simplejwt
+
+drf-spectacular
+
+python-dotenv
+
+requests
+
+black
+
 beautifulsoup4
 html5lib
+
+psycopg[binary,pool]
+
+colorful-logging
